# pagic

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg  tasks.py
.github/: ISSUE_TEMPLATE.md
demo/: main.py  wsgi.py
demo/templates/: home.j2
demos/demo1/: Makefile
demos/demo1/pages/: home.py
demos/demo1/templates/: home.j2
demos/demo2/: Makefile
demos/demo2/pages/: index1.py
docs/: Makefile  conf.py  index.md  index.rst  installation.rst  make.bat  rendering.md  usage.rst
src/pagic/: __init__.py  cli.py  html.py  job.py  page.py  pagic.py  routing.py  scanner.py  view_model.py
src/pagic/cli/: job.py  main.py
src/pagic/html/: _elements.py
tests/: test_html.py  test_pagic.py
