[tool]
[tool.poetry]
name = "pagic"
version = "0.2.2"
homepage = "https://github.com/abilian/pagic"
description = "Top-level package for Pagic."
authors = ["Abilian SAS <sf@abilian.com>"]
readme = "README.rst"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "pagic", from = "src" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.scripts]
pagic = 'pagic.cli.main:cli'


[tool.poetry.dependencies]
python = ">=3.9,<4"

Flask = "^2.0.2"
sourcetypes = "^0.0.2"
cryptography = "^37.0.2"
rich = "^12.5.1"
typer = "^0.6.1"


[tool.poetry.dev-dependencies]
## Standard cruft

# Testing
pytest = "*"
pytest-cov = "*"
coveralls = "*"

# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mccabe = "*"
mypy = "*"

# Uncompatible with recent versions
# flake8-pytest = "*"
# mastool = "*"

# Formatting
isort = "*"
black = "*"

# Other tools
profilehooks = "*"
pre-commit = "*"
safety = "*"
pytest-flask = "^1.2.0"
devtools = "^0.9.0"

# Needed for some reason
pyyaml = "*"

# Doc
restructuredtext_lint = "*"

## /standard cruft

# Doc
myst-parser = "^0.18"
sphinx-book-theme = "^0.2"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
