#
# Poetry
#
[tool.poetry]
name = "pagic"
version = "0.2.2"
homepage = "https://github.com/abilian/pagic"
description = "Top-level package for Pagic."
authors = ["Abilian SAS <sf@abilian.com>"]
readme = "README.md"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "pagic", from = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.scripts]
pagic = 'pagic.cli.main:cli'

[tool.poetry.dependencies]
python = "^3.9"

flask = "^3"
sourcetypes = "^0.0.2"
cryptography = "^37"
rich = "^12"
typer = "^0.6"
defusedxml = "^0.7.1"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"

# Other tools
devtools = "^0.10"
docformatter = "^1.5.1"
invoke = "^2.0.0"
mkdocs-material = "^9.0.12"
pre-commit = "*"
profilehooks = "*"
pytest-flask = "^1.2.0"
snoop = "^0.4.3"

# Needed for some reason
pyyaml = "*"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#
# Linters and formatters
#
[tool.isort]
profile = "black"

[tool.pyright]
exclude = ['.nox', 'tests', 'sandbox', 'doc', 'scripts', 'tmp']
include = ["src"]
